level5-E/lesson-10/main.scss
$text-font: 'Trebuchet MS';
$title-font: 'Arial';

$primary: #2078a0;
$primary-light: #d4e6f0;
$primary-dark: #267aa1;
$background-grey: #f2f2f2;

$left-pixel: clamp(50px, 14%, 126.5px);

body {
  margin: 0;
  padding: 0;
}
.html-lesson-wrapper {
  width: 100%;
  min-width: 360px;
  max-width: 100%;
  max-width: 892.75px;
  min-height: 1200px;
  height: fit-content;
  overflow: hidden;
  position: relative;
  padding-bottom: 62px;
  background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png'),
    url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/05-bg-footer.png');
  background-position: top, bottom;
  background-size: contain;
  background-repeat: no-repeat;
  font-family: $text-font;

  header {
    font-family: $title-font;
  }
  .b {
    font-weight: bold;
  }
  .i {
    font-family: italic;
  }
  .program-rank {
    position: absolute;
    top: 40px;
    left: 48px;
    color: #ffffff;
    font-size: 0px;

    .type {
      padding: 3px 16px 3px 14px;
      background-color: $primary;
      font-size: clamp(7px, 1.8vw, 15px);
    }
    .level {
      padding: 3px 12px 3px 13px;
      background-color: #996699;
      font-size: clamp(7px, 1.8vw, 15px);
    }
  }
  .line {
    margin: 0 12px;
  }
  .title {
    position: absolute;
    top: 80px;
    left: 55px;
    font-size: clamp(12px, 3vw, 27px);
  }
  .lesson-number {
    position: absolute;
    right: 6.5%;
    width: 1.9%;
    text-align: center;
    margin-top: 7.4%;
    font-size: clamp(7px, 1.8vw, 13px);
    color: #ffffff;
  }
  .row {
    display: flex;
    flex-direction: row;
  }
  .sub-text {
    font-family: $title-font !important;
    line-height: clamp(12px, 2.8vw, 22px);
    margin: 0 auto;
  }
  .section {
    position: absolute;
    left: calc(-16% + 54px);
    color: $primary;
    font-weight: bold;
    font-family: $title-font;
    top: 2px;
  }
  .divider {
    color: #d9d9d9;
    font-size: clamp(6px, 1.8vw, 15px);
    position: relative;
    left: 52%;

    &.d1 {
      margin-top: 8px;
    }
    &.d2 {
      margin-top: 28px;
    }
  }
  ul {
    margin: 3px 0px 0px 0px;
    padding: 0;
    line-height: clamp(12px, 3vw, 26px);
  }

  /* Test */
  .test-content {
    position: relative;
    margin-left: $left-pixel;
    padding-left: 18.5px;
    padding-right: 60px;
    font-size: clamp(6px, 1.8vw, 15px);
    margin-top: 20%;
    line-height: clamp(12px, 3vw, 26px);

    ul {
      margin-top: 28px;
      li {
        list-style-type: none;
        margin-bottom: 30px;
        &::before {
          position: absolute;
          display: inline;
          content: "";
          border: 2px solid;
          padding: 0.625em 0.575em;
        }
        p {
          margin: 0 auto;
          margin-left: 40px;
          &:first-child {
            font-weight: bold;
          }
        }
      }
    }
  }

  footer {
    font-size: clamp(4.5px, 1.1vw, 9px);
    position: absolute;
    width: fit-content;
    text-align: right;
    bottom: 43px;
    right: 6.2%;
    font-family: $title-font;
    width: 35%;
    span{
      overflow-wrap: break-word;
      display:inline-block
    }
  }
}

@media screen and (max-width: 900px) {
  .html-lesson-wrapper {
    min-height: unset;
    .section{
      left: calc(-16% + 54px);
    }
    section {
      padding-right: clamp(22px, 4.6vw, 60px) !important;
    }
    ul {
      margin-top: clamp(18px, 3.4vw, 28px) !important;
      li {
        margin-bottom: clamp(18px, 3.4vw, 30px) !important;
        p {
         margin-left: clamp(18px, 5vw, 40px) !important;
        }
      }
    }
    .lesson-number {
      position: absolute;
      right: 6.6%;
      width: 1.9%;
      text-align: center;
      margin-top: 7.4%;
      font-size: clamp(7px, 1.8vw, 13px);
      color: #ffffff;
    }
    footer {
      bottom: clamp(16px, 4.8vw, 43px);
      right: 5% !important;
      max-width: 35%;
    }
  }
}
@media screen and (max-width: 768px) {
  .html-lesson-wrapper {
    .program-rank {
      position: absolute;
      top: clamp(20px, 4vw, 40px);
      left: clamp(23px, 4vw, 48px);
    }
    .title {
      top: clamp(45px, 8.4vw, 80px);
      left: clamp(30px, 4.1vw, 55px);
    }
    .divider {
      &.d1,
      &.d2 {
        margin-top: clamp(18px, 3.4vw, 28px);
      }
    }
    .section {
      left: calc(-16% + 30px);
    }
  }
}

@media screen and (max-width: 600px) {
  .html-lesson-wrapper {
    .type {
      padding: 2px 8px 2px 7px !important;
    }
    .level {
      padding: 2px 6px 2px 7px !important;
    }
    .lesson-number {
      margin-top: 6.9%;
    }
    .line {
      margin: 0 6px;
      vertical-align: middle;
    }
  }
}
@media screen and (max-width: 360px) {
  .html-lesson-wrapper {
   
    .lesson-number {
      margin-top: 7.2%;
    }
    footer {
      width: 100%;
      text-align: right;
    }
  }
}

